完成了后台首页功能

--- a/login.html
+++ b/login.html
@@ -70,8 +70,8 @@
                 <div class="layui-form-item">
                     <!-- 字体图标 -->
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码"
-                        autocomplete="off" class="layui-input">
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input">
                 </div>
                 <!-- 注册按钮 -->
                 <div class="layui-form-item">
@@ -99,5 +99,4 @@
     <!-- 引入自己的js文件 -->
     <script src="/assets/js/login.js"></script>
 </body>
-
 </html>
