--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                             文章管理
                         </a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">
+                            <dd><a href="/aiticle/art_cate.html" target="fm">
                                 <i class="layui-icon layui-icon-app"></i>   
                                 文章类别
                             </a></dd>
-                            <dd><a href="javascript:;">
+                            <dd><a id="art_list" href="/aiticle/art_list.html" target="fm">
                                 <i class="layui-icon layui-icon-app"></i>   
                                 文章列表
                             </a></dd>
-                            <dd><a href="javascript:;">
+                            <dd><a href="/aiticle/art_pub.html" target="fm">
                                 <i class="layui-icon layui-icon-app"></i>   
                                 发表文章
                             </a></dd>
